--- a/css/_header.scss
+++ b/css/_header.scss
@@ -21,19 +21,21 @@
     top: 5em;
     left: calc(100% - 48px - .5em);
     transition: left .7s ease-in-out;
+    align-items: flex-start;
+    box-sizing: border-box;
 }
 
 .navigation:hover {
     @media screen and (max-width: 640px) {
-        left: calc(25% - 48px);
+        left: calc(100% - 48px - 21em);
     }
 
     @media screen and (min-width: 641px) and (max-width: 1200px) {
-        left: calc(40% - 48px - .5em);
+        left: calc(100% - 48px - 24em);
     }
 
     @media screen and (min-width: 1201px) {
-        left: calc(60% - 48px - .5em);
+        left: calc(100% - 48px - 26em);
     }
 }
 
@@ -45,22 +47,24 @@
 }
 
 .menu {
+    box-sizing: border-box;
     text-align: left;
     margin: 0;
+    padding: .5em;
     background-color: $light-color;
     border-radius: 1em;
     list-style-type: none;
 
     @media screen and (max-width: 640px) {
-        width: 80%;
+        width: 20em;
     }
 
     @media screen and (min-width: 641px) and (max-width: 1200px) {
-        width: 60%;
+        width: 23em;
     }
 
     @media screen and (min-width: 1201px) {
-        width: 40%;
+        width: 25em;
     }
 
     li {
