--- a/css/index.css
+++ b/css/index.css
@@ -34,23 +34,28 @@
   left: calc(100% - 48px - .5em);
   -webkit-transition: left .7s ease-in-out;
   transition: left .7s ease-in-out;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 @media screen and (max-width: 640px) {
   .navigation:hover {
-    left: calc(25% - 48px);
+    left: calc(100% - 48px - 21em);
   }
 }
 
 @media screen and (min-width: 641px) and (max-width: 1200px) {
   .navigation:hover {
-    left: calc(40% - 48px - .5em);
+    left: calc(100% - 48px - 24em);
   }
 }
 
 @media screen and (min-width: 1201px) {
   .navigation:hover {
-    left: calc(60% - 48px - .5em);
+    left: calc(100% - 48px - 26em);
   }
 }
 
@@ -66,8 +71,11 @@
 }
 
 .menu {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   text-align: left;
   margin: 0;
+  padding: .5em;
   background-color: #dddad9;
   border-radius: 1em;
   list-style-type: none;
@@ -75,19 +83,19 @@
 
 @media screen and (max-width: 640px) {
   .menu {
-    width: 80%;
+    width: 20em;
   }
 }
 
 @media screen and (min-width: 641px) and (max-width: 1200px) {
   .menu {
-    width: 60%;
+    width: 23em;
   }
 }
 
 @media screen and (min-width: 1201px) {
   .menu {
-    width: 40%;
+    width: 25em;
   }
 }
 
