--- a/css/_header.scss
+++ b/css/_header.scss
@@ -1,15 +1,15 @@
 .welcome {
-    width: 80%;
+    width: 80vw;
     text-align: center;
     background-color: $dark-color;
     color: $light-color;
     
-    h1 {
+    &-title {
         font-size: 3rem;
         padding: 4em 0 .1em;
     }
 
-    p {
+    &-description {
         font-size: 1.7rem;
         padding: .1em 0 4em;
     }
@@ -23,19 +23,23 @@
     transition: left .7s ease-in-out;
     align-items: flex-start;
     box-sizing: border-box;
-}
 
-.navigation:hover {
-    @media screen and (max-width: 640px) {
-        left: calc(100% - 48px - 21em);
-    }
+    &:hover {
+        @media screen and (max-width: 427px) {
+            left: calc(100% - 48px - 16em);
+        }
 
-    @media screen and (min-width: 641px) and (max-width: 1200px) {
-        left: calc(100% - 48px - 24em);
-    }
+        @media screen and (min-width: 428px) and (max-width: 640px) {
+            left: calc(100% - 48px - 21em);
+        }
 
-    @media screen and (min-width: 1201px) {
-        left: calc(100% - 48px - 26em);
+        @media screen and (min-width: 641px) and (max-width: 1200px) {
+            left: calc(100% - 48px - 24em);
+        }
+
+        @media screen and (min-width: 1201px) {
+            left: calc(100% - 48px - 26em);
+        }
     }
 }
 
@@ -55,7 +59,12 @@
     border-radius: 1em;
     list-style-type: none;
 
-    @media screen and (max-width: 640px) {
+
+    @media screen and (max-width: 427px) {
+        width: 15em;
+    }
+
+    @media screen and (min-width: 428px) and (max-width: 640px) {
         width: 20em;
     }
 
@@ -67,7 +76,7 @@
         width: 25em;
     }
 
-    li {
+    &-item {
          padding: .15em 1em;
 
          &:first-child {
@@ -78,7 +87,7 @@
              padding-bottom: .3em;
          }
 
-        a {
+        .section-link {
             display: block;
             text-decoration: none;
             color: $dark-color;
