--- a/css/index.css
+++ b/css/index.css
@@ -140,4 +140,12 @@
 .menu-item .section-link:active {
   background-color: #c34109;
 }
+
+.disclaimer {
+  width: 80%;
+  text-align: center;
+  font-size: 14px;
+  color: #dddad9;
+  background-color: rgba(0, 0, 0, 0.85);
+}
 /*# sourceMappingURL=index.css.map */
