--- a/css/base/_variables.scss
+++ b/css/base/_variables.scss
@@ -1,4 +1,5 @@
-$dark-color: hsla(20, 0%, 0%, .85);
+$dark-color: hsla(20, 0%, 0%, .9);
 $light-color: hsl(15, 6%, 86%);
+$welcome-color: hsl(15, 6%, 100%);
 $light-feature-color: hsl(15, 95%, 54%);
 $dark-feature-color: hsl(18, 91%, 40%);
