--- a/css/base/_variables.scss
+++ b/css/base/_variables.scss
@@ -1,5 +1,7 @@
 $dark-color: hsla(20, 0%, 0%, .9);
+$light-dark-color: hsla(20, 10%, 10%, .8);
 $light-color: hsl(15, 6%, 86%);
+$dark-light-color: hsl(15,6%,75%);
 $welcome-color: hsl(15, 6%, 100%);
 $light-feature-color: hsl(15, 95%, 54%);
 $dark-feature-color: hsl(18, 91%, 40%);
