--- a/css/_articles.scss
+++ b/css/_articles.scss
@@ -2,6 +2,7 @@
     width: 80vw;
     box-sizing: border-box;
     margin: auto;
+    padding-bottom: 2rem;
     background-color: $dark-light-color;
     color: $dark-color;
 
@@ -77,9 +78,61 @@
 
 .projects {
     display: flex;
+    flex-wrap: wrap;
     text-align: center;
     list-style: none;
     align-items: center;
     justify-items: center;
+}
 
+.jump-top {
+    position:fixed;
+    right: 0;
+    bottom: 0;
+}
+
+.inline-link {
+    text-decoration: none;
+    color: $dark-feature-color;
+    transition: color .7s ease-in-out;
+}
+
+.inline-link:hover {
+    color: $light-feature-color;
+}
+
+.skills {
+    width: 55vw;
+    margin: 0 auto;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-around;
+    padding-bottom: 2rem;
+
+    &-content {
+        filter: grayscale(.9);
+        transition: all .7s ease-in-out;
+    }
+
+    &-content:hover {
+        filter:grayscale(0);
+        transform: scale(1.1);
+        -ms-transform: scale(1.1);
+        -webkit-transform: scale(1.1);
+    }
+
+    &-icon {
+        width: 10vw;
+        height: auto;
+    }
+}
+
+.contact {
+    text-align: center;
+}
+
+.small-icon {
+    width: 1rem;
+    height: auto;
 }
