--- a/css/index.css
+++ b/css/index.css
@@ -8,6 +8,14 @@
   background-color: rgba(0, 0, 0, 0.9);
 }
 
+* {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  font-size: 16px;
+  font-family: 'Comfortaa', cursive;
+  line-height: 1.8em;
+}
+
 .welcome {
   width: 80vw;
   text-align: center;
@@ -46,6 +54,7 @@
           align-items: flex-start;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+  z-index: 1;
 }
 
 @media screen and (max-width: 427px) {
@@ -204,7 +213,8 @@
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   margin: auto;
-  background-color: #c3bdbb;
+  padding-bottom: 2rem;
+  background-color: #d6d2d1;
   color: rgba(0, 0, 0, 0.9);
 }
 
@@ -239,7 +249,7 @@
           box-sizing: border-box;
   margin: auto;
   background-color: rgba(28, 25, 23, 0.8);
-  color: #c3bdbb;
+  color: #d6d2d1;
 }
 
 .section-title {
@@ -283,12 +293,76 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   text-align: center;
   list-style: none;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
   justify-items: center;
+}
+
+.jump-top {
+  position: fixed;
+  right: 0;
+  bottom: 0;
+}
+
+.inline-link {
+  text-decoration: none;
+  color: #c34109;
+  -webkit-transition: color .7s ease-in-out;
+  transition: color .7s ease-in-out;
+}
+
+.inline-link:hover {
+  color: #f9521a;
+}
+
+.skills {
+  width: 55vw;
+  margin: 0 auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  padding-bottom: 2rem;
+}
+
+.skills-content {
+  -webkit-filter: grayscale(0.9);
+          filter: grayscale(0.9);
+  -webkit-transition: all .7s ease-in-out;
+  transition: all .7s ease-in-out;
+}
+
+.skills-content:hover {
+  -webkit-filter: grayscale(0);
+          filter: grayscale(0);
+  transform: scale(1.1);
+  -ms-transform: scale(1.1);
+  -webkit-transform: scale(1.1);
+}
+
+.skills-icon {
+  width: 10vw;
+  height: auto;
+}
+
+.contact {
+  text-align: center;
+}
+
+.small-icon {
+  width: 1rem;
+  height: auto;
 }
 
 .disclaimer {
