--- a/css/base/_variables.scss
+++ b/css/base/_variables.scss
@@ -1,5 +1,5 @@
 $dark-color: hsla(20, 0%, 0%, .9);
-$light-dark-color: hsla(20, 10%, 10%, .8);
+$light-dark-color: hsl(20, 10%, 10%);
 $light-color: hsl(15, 6%, 86%);
 $dark-light-color: hsl(15,6%,83%);
 $welcome-color: hsl(15, 6%, 100%);
