--- a/css/_articles.scss
+++ b/css/_articles.scss
@@ -183,8 +183,15 @@
 }
 
 .selfie {
+    @media screen and (max-width: 466px) {
+        margin: auto;
+        width: 70vw;
+        height: auto;
+        display: block;
+        border-radius: 50%;
+    }
 
-    @media screen and (max-width: 1550px) {
+    @media screen and (min-width: 466px) and (max-width: 1550px) {
         margin: auto;
         display: block;
         border-radius: 50%;
@@ -203,12 +210,17 @@
 }
 
 .resize {
-    @media screen and (max-width: 900px) {
+    @media screen and (max-width: 510px) {
+        width: 60vw;
+        height: auto;
+    }
+
+    @media screen and (min-width: 510px) and (max-width: 1300px) {
         width: auto;
         height: 50vh;
     }
 
-    @media screen and (min-width: 900px) {
+    @media screen and (min-width: 1300px) {
         width: auto;
         height: 50vh;
     }
@@ -218,17 +230,17 @@
     width: 80vw;
     text-align: center;
     font-size: 1.5rem;
-    padding-bottom: 55vh;
+    padding-bottom: 5vh;
 }
 
 .hobbie-description {
     font-size: 1.5rem;
 
-    @media screen and (max-width: 900px) {
-        width: 70vw;
+    @media screen and (max-width: 1300px) {
+        width: 60vw;
     }
     
-    @media screen and (min-width: 900px) {
+    @media screen and (min-width: 1300px) {
         display: inline-block;
         width: 30vw;
         top: 0;
@@ -236,12 +248,23 @@
 }
 
 .hobbie {
-    left: 20vw;
+    left: 0;
     width: 60vw;
-    position: absolute;
+    position: relative;
     display: flex;
     align-items: center;
     justify-content: space-between;
     background-color: $light-dark-color;
     color: $light-color;
+    margin-bottom: 5vh;
+
+    @media screen and (max-width: 1300px) {
+        display: block;
+    }
+    
+    @media screen and (min-width: 1300px) {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
 }
