--- a/css/_articles.scss
+++ b/css/_articles.scss
@@ -142,7 +142,34 @@
 
 .contact {
     text-align: center;
-
+    &-text {
+        @extend .article-content;
+        padding: 0;
+        font-weight: 500;
+        text-align: center;
+    }
+    
+    &-list {
+        padding: 0;
+        list-style: none;
+        margin: 0;
+        &-item {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            margin: 0;
+        }
+        &-icon {
+            margin: 0 .5rem;
+        }
+        & .inline-link {
+            margin: 0;
+        }
+        & .small-icon {
+            width: 1.5rem;
+        }
+    }
+    
     &-form {
         display: block;
         margin: auto;
@@ -154,7 +181,6 @@
 
         @media screen and (min-width: 900px) {
             width: 30vw;
-            height: 15vw;
         }
     }
 
