--- a/css/_header.scss
+++ b/css/_header.scss
@@ -1,8 +1,8 @@
 * {
     box-sizing: border-box;
     font-size: $font-size;
-    @media screen and (min-width: 700px) {
-        font-size: 1.5em;
+    @media screen and (min-width: 720px) {
+        font-size: 1.2rem;
     }
     font-family: 'Comfortaa', cursive;
     line-height: 1.8em;
@@ -10,6 +10,9 @@
 
 .welcome {
     width: 80vw;
+    @media screen and (max-width: 720px) {
+        width: 100vw;
+    }
     text-align: center;
     background-color: $dark-color;
     background-position: center;
@@ -35,7 +38,7 @@
 .navigation {
     position: fixed;
     display: flex;
-    top: 5em;
+    top: 1em;
     left: calc(100% - 48px - .5em);
     transition: left .7s ease-in-out;
     align-items: flex-start;
@@ -61,25 +64,24 @@
     }
 }
 
-.menu-icon {
-    display: inline-flex;
-    align-self: baseline;
-    margin-right: .5em;
-    filter: invert(1);
-    background-color: $light-color;
-    border-radius: 50%;
-}
-
 .menu {
     box-sizing: border-box;
     text-align: left;
     margin: 0;
-    padding: .5em;
+    padding: 1rem;
     background-color: $light-color;
     border-radius: 1em;
     border: 1px solid $dark-feature-color;
     list-style-type: none;
 
+    &-icon {
+        display: inline-flex;
+        align-self: baseline;
+        margin-right: 1rem;
+        filter: invert(1);
+        background-color: $light-color;
+        border-radius: 50%;
+    }
 
     @media screen and (max-width: 427px) {
         width: 15em;
@@ -100,6 +102,10 @@
     &-item {
          padding: .15em 1em;
          list-style: none;
+
+         > li {
+             max-width: 11.25rem;
+         }
 
          &:first-child {
              padding-top: .3em;
